# labeldroid

./: .gitignore  .pnp.cjs  Cargo.toml  LICENSE  README.md  index.html  package.json  tsconfig.json
.github/workflows/: release.yml
bindings/node/: .gitattributes  .gitignore  Cargo.toml  build.ts  index.d.ts  index.js  package.json
bindings/node/src/: lib.rs
renderer/: App.vue  main.ts  package.json  types.ts
renderer/components/: CanvasArea.vue  Home.vue  Sidebar.vue  TitleBar.vue
renderer/router/: index.ts
renderer/utils/: api.ts  ipcManager.ts  utils.ts
share/: Cargo.toml
share/src/: lib.rs
share/src/config/: mod.rs
share/src/manager/: server_manager.rs
share/src/utils/: dialog.rs  fs.rs  mod.rs
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apply.rs  command.rs  handle.rs  lib.rs  main.rs  menu.rs  server.rs
src-tauri/src/utils/: mod.rs  utils.rs
src/components/: Sidebar.vue
types/: Cargo.toml
types/src/: config.rs
