[package]
name = "share"
version = "0.1.0"
edition = "2021"

[features]
default = []
napi-support = ["labeldroid-types/napi-support"]

[dependencies]
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
labeldroid-types = { path = "../types" }
axum = { version = "0.8.8", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["cors"] }
log = "0.4.29"
dirs = "6.0.0"
yaml_serde = "0.10.4"
