[package]
name = "labeldroid"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "labeldroid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.5.1"
tauri = { version = "2", features = ["tray-icon"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-log = "2.8.0"
log = "0.4.29"
tauri-plugin-dialog = "2"
share = { path = "../share" }
labeldroid-types = { path = "../types" }
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "json", "multipart", "cookies", "rustls-tls"] }
tauri-plugin-global-shortcut = "2.3.1"
